--- a/lectures/src/T16 - Async/T16.md
+++ b/lectures/src/T16 - Async/T16.md
@@ -29,228 +29,72 @@ h1 {
 
 ---
 
-# Motivation
+# Synchronous programming
 
 - Normally, a given program's code runs straight along, with only one thing happening at once.
 - If a function relies on the result of another function, it has to wait for the other function to finish and return.
   - And until that happens, the entire program is essentially stopped from the perspective of the user.
-- This is **synchronous programming**.
-
----
-
-# Motivation
-
-- synchronicity can lead to frustrating experience for a user.
-- Also it might not be a good use of computer processing power.
-  - Computers have multiple processor cores available.
-  - We should let the other task get processed on another processor core and let us know when it's done.
-- This is the basis of **asynchronous programming**.
-
----
-
-# Environment
-
-- It is up to the programming environment you are using (web browsers, in the case of web development) to provide you with APIs that allow you to run such tasks asynchronously.
-
----
-
-# Synchronous JavaScript
-
-- A lot of the functionality we have larned are synchronous.
-
----
-
-```html
-<button>Click me</button>
-```
-
-```javascript
-const btn = document.querySelector("button");
-btn.addEventListener("click", () => {
-  alert("You clicked me!");
-
-  let pElem = document.createElement("p");
-  pElem.textContent = "This is a newly-added paragraph.";
-  document.body.appendChild(pElem);
-});
-```
+  - Also referred to as _blocking_.
 
 ---
 
 # Blocking code
 
-- When a web app runs in a browser and it executes an intensive chunk of code without returning control to the browser, the browser can appear to be frozen.
-- This is called **blocking**.
+```js
+function blocking() {
+  for (let i = 0; i < 5e8; i++) {}
+  console.log("Finish blocking calculation");
+}
 
----
-
-```javascript
-const btn = document.querySelector("button");
-btn.addEventListener("click", () => {
-  // Expensive calculations
-  let myDate;
-  for (let i = 0; i < 10000000; i++) {
-    let date = new Date();
-    myDate = date;
-  }
-  console.log(myDate);
-  // -->
-
-  let pElem = document.createElement("p");
-  pElem.textContent = "This is a newly-added paragraph.";
-  document.body.appendChild(pElem);
-});
+console.log("Start");
+blocking();
+console.log("Done");
 ```
 
 ---
 
-# Side note: thread
+# Issue
 
-- JavaScript, generally speaking, is **single-threaded**.
-- A thread is basically a single process that a program can use to complete tasks. Each thread can only do a single task at once.
-- Even with multiple cores, you could only get it to run tasks on a single thread, called the **main thread**.
+- Synchronicity can lead to frustrating experience for a user.
+- This is the basis of **asynchronous programming**.
 
 ---
 
-# What happened?
+# Where do we find asynchronousity?
 
-- The code above contains all synchronous tasks.
-- Tasks are executed sequentially.
-
-```
-Main Thread: Task A --> Task B --> Task C --> Task D ...
-```
+- It is up to the programming environment to provide you with APIs that allow you to run such tasks asynchronously.
+- For all blockchain operations, most of the APIs are asynchronous.
+  - _(Unfortunately...)_
 
 ---
 
 # Asynchronous javascript
 
-- `setTimeout`
-- `setInterval`
-
 ---
 
-# `setTimeout`
+# `setTimeout` API
 
 ```javascript
-const btn = document.querySelector("button");
-btn.addEventListener("click", () => {
-  // Asynchronous task
-  setTimeout(() => alert("I waited."), 3000);
-  //
-  let pElem = document.createElement("p");
-  pElem.textContent = "This is a newly-added paragraph.";
-  document.body.appendChild(pElem);
-});
-```
-
----
-
-# What happened?
-
-- `setTimeout` cause the "task" (callback function) be to asynchronous.
-
-```
-Main Thread: Fire Handler --(Skip alert)--> Show paragraph --(After 3 seconds)--> Show alert.
-```
-
----
-
-# Passing extra argument
-
-```javascript
-setTimeout(() => alert("I waited"), 3000);
-
+setTimeout(() => alert("I waited for 3 seconds."), 3000);
 // Or
-
-setTimeout(alert, 3000, "I waited");
+setTimeout(() => {
+  alert("I waited for 3 seconds.");
+}, 3000);
 ```
 
 ---
 
-# What is the value of `x` from `alert`?
+```js
+function notblocking() {
+  setTimeout(() => {
+    console.log("Finish non-blocking calculation");
+  }, 3000);
+}
 
-```javascript
-let x = 10;
-setTimeout(alert, 3000, x);
-x = 20;
-console.log(x);
+console.log("Start");
+notblocking();
+console.log("Done");
 ```
-
-```javascript
-let x = 10;
-setTimeout(() => alert(x), 3000);
-x = 20;
-console.log(x);
-```
-
----
-
-# `setInterval`
-
-```html
-<p id="clock"></p>
-<button>Click me</button>
-```
-
----
-
-```javascript
-const clock = document.querySelector("#clock");
-// Asynchronous task
-setInterval(() => {
-  const date = new Date();
-  clock.textContent = date.toLocaleTimeString();
-}, 1000);
-
-const btn = document.querySelector("button");
-btn.addEventListener("click", () => {
-  let pElem = document.createElement("p");
-  pElem.textContent = "This is a newly-added paragraph.";
-  document.body.appendChild(pElem);
-});
-```
-
-- If `setInterval` did not create a asynchronous task, the button would not work!
-
----
-
-# `clearInterval`
-
-```html
-<p id="clock"></p>
-<button id="start">Start Clock</button>
-<button id="stop">Stop Clock</button>
-```
-
----
-
-```javascript
-const clock = document.querySelector("#clock");
-const btnStart = document.querySelector("#start");
-const btnStop = document.querySelector("#stop");
-
-let timer;
-btnStart.addEventListener("click", () => {
-  // Asynchronous task
-  timer = setInterval(() => {
-    const date = new Date();
-    clock.textContent = date.toLocaleTimeString();
-  }, 1000);
-});
-
-btnStop.addEventListener("click", () => {
-  clearInterval(timer);
-});
-```
-
----
-
-# Async callbacks
-
-- Async callbacks are functions that are specified as arguments when calling a function which will start executing code in the background.
-- When the background code finishes running, it calls the callback function to let you know the work is done, or to let you know that something of interest has happened.
-- Using callbacks is slightly old-fashioned now, but you'll still see them in use in a number of lder-but-still-commonly-used APIs.
 
 ---
 
@@ -336,109 +180,48 @@ const myPromise = new Promise((resolve, reject) => {
 
 ---
 
-# Responding to a Promise
+# Creating `fake_fetch`
 
-```javascript
-const myPromise = new Promise((resolve, reject) => {
-  setTimeout(() => {
-    reject("foo"); //or reject('foo')
-  }, 300);
-});
-```
+- Use `promise` and `setTimeout`
 
-```javascript
-myPromise.then((msg) => console.log(msg)).catch((err) => console.log(err));
-```
-
-- You can use `quokka` to see which block get executed.
-
----
-
-# Returning from `then`
-
-```javascript
-myPromise
-  .then((msg) => {
-    console.log(msg);
-    return "bar";
-  })
-  .then((msg) => console.log(msg));
-```
-
----
-
-# Returning a promise
-
-```javascript
-myPromise
-  .then((msg) => {
-    console.log(msg);
-    return new Promise((resolve, reject) => {
-      setTimeout(() => {
-        resolve("bar");
-      }, 3000);
-    });
-  })
-  .then((msg) => console.log(msg));
-```
-
-(Run in a web browser to see the log timing.)
-
----
-
-# Promise factory
-
-```javascript
-function wait(msg, time) {
+```js
+function fake_fetch(tag, isSuccess = true, wait = 2000) {
   return new Promise((resolve, reject) => {
-    setTimeout(() => resolve(msg), time);
+    setTimeout(() => {
+      if (isSuccess) {
+        resolve(`Success: ${tag}`);
+      } else {
+        reject(`Error: ${tag}`);
+      }
+    }, wait);
   });
 }
 ```
 
 ---
 
-```javascript
-wait("First", 1000)
-  .then((msg) => {
-    console.log(msg);
-    return wait("Second", 2000);
-  })
-  .then((msg) => {
-    console.log(msg);
-    return wait("Third", 3000);
-  })
-  .then((msg) => {
-    console.log(msg);
-    return wait("Fourth", 4000);
-  })
-  .then((msg) => {
-    console.log(msg);
-  });
+# Using `fake_fetch`
+
+```js
+console.log("Start");
+fake_fetch("R1").then((tag) => {
+  console.log(tag);
+});
 ```
 
 ---
 
-# Back to `fetch`
+# Chaining multiple `fake_fetch`
 
-```html
-<h1>Star Wars</h1>
-<p id="p1"></p>
-<p id="p2"></p>
-```
-
----
-
-# Single Promise
-
-```javascript
-const p1 = document.querySelector("#p1");
-
-fetch("https://swapi.dev/api/people/1")
-  .then((res) => res.json())
-  .then((data) => {
-    // console.log(JSON.stringify(data));
-    p1.textContent = JSON.stringify(data);
+```js
+console.log("Start");
+fake_fetch("R1")
+  .then((tag) => {
+    console.log(tag);
+    return fake_fetch("R2");
+  })
+  .then((tag) => {
+    console.log(tag);
   });
 ```
 
@@ -447,77 +230,17 @@ fetch("https://swapi.dev/api/people/1")
 # With error handling
 
 ```javascript
-const p1 = document.querySelector("#p1");
-
-fetch("https://swapi.dev/api/random_stuff")
-  .then((res) => res.json())
-  .then((data) => {
-    p1.textContent = JSON.stringify(data);
+console.log("Start");
+fake_fetch("R1")
+  .then((tag) => {
+    console.log(tag);
+    return fake_fetch("R2", false);
   })
-  .catch((err) => {
-    p1.textContent = err;
-  });
-```
-
----
-
-# Multiple dependent requests
-
-```javascript
-fetch("https://swapi.dev/api/people/1")
-  .then((res) => res.json())
-  .then((data) => {
-    p1.textContent = JSON.stringify(data);
-    return fetch(data.homeworld); // "https://swapi.dev/api/planets/1/"
+  .then((tag) => {
+    console.log(tag);
   })
-  .then((res) => res.json())
-  .then((data) => {
-    // console.log(data);
-    p2.textContent = JSON.stringify(data);
-  });
-```
-
----
-
-# Multiple independent requests
-
-- The `Promise.all()` method takes an iterable of promises as an input, and returns a single `Promise` that resolves to an array of the results of the input promises.
-
----
-
-- HTML
-
-```html
-<body>
-  <h1>Star Wars Characters</h1>
-  <ul></ul>
-</body>
-```
-
----
-
-- JavaScript
-
-```javascript
-const ul = document.querySelector("ul");
-
-fetch1 = fetch("https://swapi.dev/api/people/1");
-fetch2 = fetch("https://swapi.dev/api/people/2");
-fetch3 = fetch("https://swapi.dev/api/people/3");
-fetch4 = fetch("https://swapi.dev/api/people/4");
-
-Promise.all([fetch1, fetch2, fetch3, fetch4])
-  .then((responses) => {
-    return responses.map((response) => response.json());
-  })
-  .then((array) => {
-    array.forEach((el) => {
-      el.then((data) => {
-        const li = document.createElement("li");
-        li.textContent = JSON.stringify(data);
-        ul.appendChild(li);
-      });
-    });
+  .catch((tag) => {
+    console.log(tag);
   });
 ```
 
@@ -530,61 +253,34 @@ Promise.all([fetch1, fetch2, fetch3, fetch4])
 
 ---
 
-```javascript
-const p1 = document.querySelector("#p1");
-
-async function getData(url) {
-  const res = await fetch(url);
-  const data = await res.json();
-  p1.textContent = JSON.stringify(data);
+```js
+async function call_fetch() {
+  const tag1 = await fake_fetch("R1");
+  console.log(tag1);
+  const tag2 = await fake_fetch("R2");
+  console.log(tag2);
 }
 
-getData("https://swapi.dev/api/people/1");
+console.log("Start");
+call_fetch();
 ```
 
 ---
 
-# Error handling
+# With error handling
 
-```javascript
-const p1 = document.querySelector("#p1");
-
-async function getData(url) {
+```js
+async function call_fetch() {
   try {
-    const res = await fetch(url);
-    const data = await res.json();
-    p1.textContent = JSON.stringify(data);
+    const tag1 = await fake_fetch("R1");
+    console.log(tag1);
+    const tag2 = await fake_fetch("R2", false);
+    console.log(tag2);
   } catch (err) {
-    p1.textContent = JSON.stringify(err);
+    console.log(err);
   }
 }
 
-getData("https://swapi.dev/api/random_staff");
-```
-
----
-
-# Multiple independent requests
-
----
-
-```javascript
-const ul = document.querySelector("ul");
-
-const urls = [
-  "https://swapi.dev/api/people/1",
-  "https://swapi.dev/api/people/2",
-  "https://swapi.dev/api/people/3",
-  "https://swapi.dev/api/people/4",
-];
-
-async function getData(url) {
-  const res = await fetch(url);
-  const data = await res.json();
-  const li = document.createElement("li");
-  li.textContent = JSON.stringify(data);
-  ul.appendChild(li);
-}
-
-urls.forEach((url) => getData(url));
+console.log("Start");
+call_fetch();
 ```
