--- a/lectures/src/T16 - Async/T16.md
+++ b/lectures/src/T16 - Async/T16.md
@@ -153,15 +153,15 @@ A `Promise` is in one of these states:
 (Use firefox console)
 
 ```javascript
-const a = new Promise(() => {}); //Promise { <state>: "pending" }s
+new Promise(() => {}); //Promise { <state>: "pending" }s
 
-const b = Promise.resolve(); // Promise { <state>: "fulfilled", <value>: undefined }
+Promise.resolve(); // Promise { <state>: "fulfilled", <value>: undefined }
 
-const b = Promise.resolve("I waited."); // Promise { <state>: "fulfilled", <value>: "I waited." }
+Promise.resolve("I waited."); // Promise { <state>: "fulfilled", <value>: "I waited." }
 
-const c = Promise.reject(); // Promise { <state>: "rejected", <reason>: undefined }
+Promise.reject(); // Promise { <state>: "rejected", <reason>: undefined }
 
-const c = Promise.reject("Wrong"); // Promise { <state>: "rejected", <reason>: "Wrong" }
+Promise.reject("Wrong"); // Promise { <state>: "rejected", <reason>: "Wrong" }
 ```
 
 ---
