--- a/lectures/src/T16 - Async/T16.md
+++ b/lectures/src/T16 - Async/T16.md
@@ -75,10 +75,10 @@ console.log("Done");
 # `setTimeout` API
 
 ```javascript
-setTimeout(() => alert("I waited for 3 seconds."), 3000);
+setTimeout(() => console.log("I waited for 3 seconds."), 3000);
 // Or
 setTimeout(() => {
-  alert("I waited for 3 seconds.");
+  console.log("I waited for 3 seconds.");
 }, 3000);
 ```
 
@@ -223,6 +223,14 @@ fake_fetch("R1")
   .then((tag) => {
     console.log(tag);
   });
+```
+
+Compared with
+
+```js
+console.log("Start");
+fake_fetch("R1").then((tag) => console.log(tag));
+fake_fetch("R2").then((tag) => console.log(tag));
 ```
 
 ---
