--- a/lectures/src/T17 - Hardhat/T17.md
+++ b/lectures/src/T17 - Hardhat/T17.md
@@ -59,7 +59,7 @@ h1 {
 ## Command line
 
 - `npm init -y`
-- `npm install --save-dev ts-node typescript`
+- `npm install --save-dev ts-node typescript dotenv`
 - `npm install --save-dev chai @types/node @types/mocha @types/chai`
 - `npm install --save-dev hardhat @nomicfoundation/hardhat-toolbox`
 - `npx hardhat`
@@ -166,3 +166,61 @@ main()
 
 - Import account
   - `0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80`
+
+---
+
+# Deploying to live network
+
+### Alchemy
+
+- Visit https://www.alchemy.com/
+- Create `APP`
+- Obtain `API Key`
+
+### MetaMask
+
+- Get your private key.
+
+---
+
+# `env` file
+
+`./.env`
+
+```
+ALCHEMY_API_KEY=<<PASTE API KEY HERE>>
+GOERLI_PRIVATE_KEY=<<PASTE PRIVATE KEY HERE>>
+```
+
+---
+
+`./hardhat.config.ts`
+
+```js
+import { config as dotEnvConfig } from "dotenv";
+dotEnvConfig();
+import { HardhatUserConfig } from "hardhat/config";
+import "@nomicfoundation/hardhat-toolbox";
+
+const ALCHEMY_API_KEY = process.env.ALCHEMY_API_KEY || "";
+const GOERLI_PRIVATE_KEY = process.env.GOERLI_PRIVATE_KEY || "";
+
+const config: HardhatUserConfig = {
+  solidity: "0.8.17",
+  networks: {
+    goerli: {
+      url: `https://eth-goerli.alchemyapi.io/v2/${ALCHEMY_API_KEY}`,
+      accounts: [GOERLI_PRIVATE_KEY],
+    },
+  },
+};
+
+export default config;
+```
+
+---
+
+# Live deployment
+
+- `npx hardhat run --network goerli scripts/deploy-my-secret.ts`
+- Check _Explorer_ page in Alchemy.
