--- a/lectures/src/T17 - Hardhat/T17.md
+++ b/lectures/src/T17 - Hardhat/T17.md
@@ -50,13 +50,13 @@ h1 {
 
 ---
 
-## VSCode
+# VSCode
 
-- Install `Solidify` (by Nomic Foundation) extension
+- Install `Solidity` (by Nomic Foundation) extension
 
 ---
 
-## Command line
+# Command line
 
 - `npm init -y`
 - `npm install --save-dev ts-node typescript dotenv`
@@ -148,7 +148,7 @@ main()
 
 ---
 
-# Deploying to local network
+# Deploying to a local network
 
 - `npx hardhat node`
 - `npx hardhat run --network localhost scripts/deploy-my-secret.ts`
@@ -156,7 +156,7 @@ main()
 
 ---
 
-# Connect to local network with MetaMask
+# Connect to the local network from MetaMask
 
 - `Setting` -> `Network` -> `Add Network` -> `Add a network manually`
 
@@ -169,7 +169,7 @@ main()
 
 ---
 
-# Deploying to live network
+# Deploying to a live network
 
 ### Alchemy
 
@@ -182,8 +182,6 @@ main()
 - Get your private key.
 
 ---
-
-# `env` file
 
 `./.env`
 
