--- a/lectures/src/T17 - Hardhat/T17.md
+++ b/lectures/src/T17 - Hardhat/T17.md
@@ -31,11 +31,13 @@ h1 {
 
 # Why not Remix?
 
-- Remix is great for quick development and testing.
+- Remix is great for quick experiment and one-time deployment.
 - However, Remix lacks advance functionality and customization.
-  - Testing
-  - Automatic deployment
-  - Debugging
+  - Batch compilation
+  - Batch/programmatic testing
+  - Scripted deployment
+  - Advanced debugging
+  - Integration with other processional tools (Git, Alchemy, ... )
 
 ---
 
@@ -50,9 +52,11 @@ h1 {
 
 ---
 
-# VSCode
+# Prerequisite
 
-- Install `Solidity` (by Nomic Foundation) extension
+- Node JS
+- VSCode
+  - Install `Solidity` (by Nomic Foundation) extension
 
 ---
 
@@ -116,6 +120,32 @@ describe("Secret Message", () => {
 # Testing
 
 - `npx hardhat test`
+
+---
+
+# Debugging
+
+- `console.log`
+
+---
+
+```js
+// SPDX-License-Identifier: GPL-3.0
+import "../node_modules/hardhat/console.sol"; // <----------------- ADD
+pragma solidity >=0.7.0 <0.9.0;
+contract MySecret {
+    string public secret;
+    constructor(string memory _secret) {
+        console.log("Logging", msg.sender); // <----------------- ADD
+        secret = _secret;
+    }
+    function changeSecret(string memory _secret) public {
+        secret = _secret;
+    }
+}
+```
+
+- Run `npx hardhat test`
 
 ---
 
