--- a/lectures/src/T18 - Testing/T18.md
+++ b/lectures/src/T18 - Testing/T18.md
@@ -45,5 +45,62 @@ h1 {
 # Testing smart contract
 
 - Remember that smart contracts cannot typically be updated after launching.
-- You want to make sure that it works correctly before deploying.
-- Testing smart contracts is one of the most important measures for improving smart contract security.
+- You want to make sure that it **works correctly** before deploying.
+
+---
+
+# What do we test in the contract?
+
+- Technical-facing test
+  - For programmer
+  - Unit test
+  - Test Driven Development (TDD)
+- Business-facing test
+  - For client
+  - Integrated test
+  - Behavior Driven Development (BDD)
+
+---
+
+# Agile testing quadrant
+
+![](./img/testing.png)
+
+---
+
+# Story
+
+`Scenario`: double result
+`Given`: a variable `x` with value 2
+`When`: I multiply `x` by 2
+`Then`: `x` should equal 4
+
+---
+
+# Examples
+
+|          | Technical (TDD)              | Business (BDD)                   |
+| -------- | ---------------------------- | -------------------------------- |
+| Scenario | Resetting state              | Winning                          |
+| Given    | `players` array is not empty | Running lottery                  |
+| When     | calling `pickWinner`         | calling `pickWinner`             |
+| Then     | `players` array is empty     | Winner gets money. Others don't. |
+
+---
+
+# Testing tools
+
+- Framework
+  - [Mocha](https://mochajs.org/)
+- Assertion Library
+  - Tools to verify that things are correct
+  - [Chai](https://www.chaijs.com/)
+  - [Chai-Matcher](https://ethereum-waffle.readthedocs.io/en/latest/matchers.html)
+- JS blockchain library
+  - [Ether.js](https://docs.ethers.org/v5/)
+
+---
+
+# Let's code
+
+---
