--- a/lectures/src/T18 - Testing/T18.md
+++ b/lectures/src/T18 - Testing/T18.md
@@ -101,6 +101,104 @@ h1 {
 
 ---
 
-# Let's code
+# Test-code structure
 
 ---
+
+```js
+describe("Set 1", function () {
+  describe("1-1", function () {
+    it("does something 1", function () {});
+    it("does something 2", function () {});
+    it("does something 3", function () {});
+  });
+
+  describe("1-2", function () {
+    it("does something 4", function () {});
+    it("does something 5", function () {});
+  });
+});
+
+describe("Set 2", function () {
+  describe("2-1", function () {
+    it("does something 6", function () {});
+    it("does something 7", function () {});
+    it("does something 8", function () {});
+  });
+});
+```
+
+---
+
+# Running test
+
+- `npx hardhat test`
+- `npx hardhat test --grep 5`
+  - Only run tests that matche the pattern.
+
+---
+
+# `expect`
+
+```js
+import { expect } from "chai";
+
+function double(a: number) {
+  return a * 2;
+}
+
+describe("Set 3", function () {
+  it("equals 1", function () {
+    expect(double(1)).to.be.equal(2);
+  });
+  it("is greater than 1", function () {
+    expect(double(2)).to.be.greaterThan(3);
+  });
+  it("is not equal to itself", function () {
+    expect(double(10)).to.not.be.equal(10);
+  });
+});
+```
+
+---
+
+# Let's test a smart contract
+
+---
+
+`./contracts/MySecret.sol`
+
+```js
+// SPDX-License-Identifier: GPL-3.0
+import "../node_modules/hardhat/console.sol";
+pragma solidity >=0.7.0 <0.9.0;
+contract MySecret {
+    string public secret;
+    constructor(string memory _secret) {
+        secret = _secret;
+    }
+    function changeSecret(string memory _secret) public {
+        secret = _secret;
+    }
+}
+```
+
+Run `npx hardhat compile`
+
+---
+
+```js
+import { expect } from "chai";
+import { ethers } from "hardhat";
+
+describe("Set 4", function () {
+  it("checks initial message", async function () {
+    const [owner] = await ethers.getSigners();
+    const MySecret = await ethers.getContractFactory("MySecret");
+    const mySecret = await MySecret.connect(owner).deploy("Super Secret");
+
+    const message = await mySecret.secret();
+    expect(message).to.be.equal("Super Secret");
+  });
+});
+```
