--- a/lectures/src/T18 - Testing/T18.md
+++ b/lectures/src/T18 - Testing/T18.md
@@ -25,20 +25,16 @@ h1 {
 
 ---
 
-# Development environment for Ethereum software
-
----
-
 # Testing smart contract
 
 ---
 
 # Why (automated) testing software
 
-- To reduce bugs
-- Tests allow you to make changes in your code quickly
-- Helps break down problems into manageable pieces
-- Let’s you sleep at night (because you actually know that your code works)
+- To reduce bugs.
+- Tests allow you to make changes in your code quickly.
+- Helps break down problems into manageable pieces.
+- Let’s you sleep at night (because you actually know that your code works).
 
 ---
 
@@ -187,18 +183,142 @@ Run `npx hardhat compile`
 
 ---
 
+# Test structure
+
 ```js
 import { expect } from "chai";
 import { ethers } from "hardhat";
 
 describe("Set 4", function () {
-  it("checks initial message", async function () {
-    const [owner] = await ethers.getSigners();
-    const MySecret = await ethers.getContractFactory("MySecret");
-    const mySecret = await MySecret.connect(owner).deploy("Super Secret");
+  // ...
+  // ...
+});
+```
 
-    const message = await mySecret.secret();
-    expect(message).to.be.equal("Super Secret");
+---
+
+# Check initial message
+
+```js
+//  ...
+it("checks initial message", async function () {
+  const [owner] = await ethers.getSigners();
+  const MySecret = await ethers.getContractFactory("MySecret");
+  const mySecret = await MySecret.connect(owner).deploy("Super Secret");
+
+  const message = await mySecret.secret();
+  expect(message).to.be.equal("Super Secret");
+});
+//  ...
+```
+
+---
+
+# Check changing message
+
+```js
+// ...
+it("checks that message can be changed", async function () {
+  const [owner, other] = await ethers.getSigners();
+  const MySecret = await ethers.getContractFactory("MySecret");
+  const mySecret = await MySecret.connect(owner).deploy("Super Secret");
+
+  await mySecret.connect(other).changeSecret("Changed Secret");
+  expect(await mySecret.secret()).to.be.equal("Changed Secret");
+});
+// ...
+```
+
+---
+
+# Use of `loadFixture`
+
+- Notice that we always have to repeatedly deploy the contract in every test.
+- We can use `loadFixture` to avoid repeating the same process.
+- `loadFixture` will run the setup the first time, and quickly return to that state in the other tests.
+
+---
+
+# Setup `loadFixture`
+
+```js
+import { loadFixture } from "@nomicfoundation/hardhat-network-helpers";
+
+async function deployMySecret() {
+  const [owner, other] = await ethers.getSigners();
+  const MySecret = await ethers.getContractFactory("MySecret");
+  const mySecret = await MySecret.connect(owner).deploy("Super Secret");
+  return { owner, other, mySecret };
+}
+```
+
+---
+
+# Use `loadFixture`
+
+```js
+it("checks initial message", async function () {
+  const { mySecret } = await loadFixture(deployMySecret);
+  const message = await mySecret.secret();
+  expect(message).to.be.equal("Super Secret");
+});
+```
+
+---
+
+# Use `loadFixture`
+
+```js
+it("checks that message can be changed", async function () {
+  const { other, mySecret } = await loadFixture(deployMySecret);
+  await mySecret.connect(other).changeSecret("Changed Secret");
+  expect(await mySecret.secret()).to.be.equal("Changed Secret");
+});
+```
+
+---
+
+# BigNumber
+
+- Many operations in Ethereum operate on numbers which are outside the range of safe values to use in JavaScript.
+- A BigNumber is an object which safely allows mathematical operations on numbers of any magnitude.
+- Most operations which need to return a value will return a BigNumber and parameters which accept values will generally accept them.
+
+---
+
+# Experimenting with BigNumber
+
+```js
+import { expect } from "chai";
+import { ethers } from "hardhat";
+const { BigNumber } = ethers;
+
+describe("Set 5", function () {
+  it("tests BigNumber", async function () {
+    const big1 = BigNumber.from(100);
+    const big2 = BigNumber.from(10);
+    expect(big1).to.be.equal(100);
+    expect(big1.add(big2)).to.be.equal(110);
+    expect(big1.sub(big2)).to.be.equal(90);
+    expect(big1.mul(big2)).to.be.equal(1000);
+  });
+});
+```
+
+---
+
+# Testing remaning balance
+
+```js
+describe("Set 6", function () {
+  it("checks gas", async function () {
+    const { other, mySecret } = await loadFixture(deployMySecret);
+    const balanceBefore = await other.getBalance();
+    const tx = await mySecret.connect(other).changeSecret("Changed Secret");
+    const receipt = await tx.wait();
+    const gas = receipt.gasUsed.mul(receipt.effectiveGasPrice);
+    const balanceAfter = await other.getBalance();
+    expect(balanceAfter).to.be.equal(balanceBefore.sub(gas));
   });
 });
 ```
