--- a/lectures/src/T18 - Testing/T18.md
+++ b/lectures/src/T18 - Testing/T18.md
@@ -322,3 +322,23 @@ describe("Set 6", function () {
   });
 });
 ```
+
+---
+
+# Lottery contact
+
+https://gist.github.com/nnnpooh/e065e160fe39c6f6c839de350dfe0fd7
+
+---
+
+# Setup
+
+- Deployed contract
+- 5 players entering with some amount of ether (greater than 0.1).
+
+---
+
+# Test
+
+- Only owner can call `pickWinner` function.
+- One player got all the money. The other did not.
