--- a/lectures/src/T19 - DApp/T19.md
+++ b/lectures/src/T19 - DApp/T19.md
@@ -31,4 +31,14 @@ h1 {
 
 # Template
 
-- https://github.com/nnnpooh/blockchain-class-dapp
+- Fork the following repository
+  - https://github.com/nnnpooh/blockchain-class-dapp
+- Clone your new forked repository to local machine
+  - `git clone ......`
+- Open the newly cloned folder in `VSCode`
+- Install library
+  - `npm install`
+- Run
+  - `npm run dev`
+
+---
