--- a/lectures/src/T19 - DApp/T19.md
+++ b/lectures/src/T19 - DApp/T19.md
@@ -29,6 +29,10 @@ h1 {
 
 ---
 
+# Part 1
+
+---
+
 # Template
 
 - Fork the following repository
@@ -42,3 +46,105 @@ h1 {
   - `npm run dev`
 
 ---
+
+# Structure
+
+- `Home` component
+  - `NavBar` component
+  - `Body` component
+- Reactive variable
+  - `secret`
+    ![bg right:50%](./img/p1_1.jpg)
+
+---
+
+# Part 2
+
+---
+
+# Library
+
+- Install `ethers` library
+  - `npm install ethers@5.7.2`
+
+---
+
+# `_app` file
+
+- Manage layout
+  ![bg contain right:50%](./img/p2_1.jpg)
+
+---
+
+# Centralized store
+
+---
+
+# Stores
+
+- `useWorkingStore()`
+  - `secret`
+- `useMetaMaskStore()`
+  - `account`
+  - `balance`
+  - `chainId`
+  - `isEthereumAvailable`
+  - `provider`
+- [`./src/utils/stores.ts`](https://gist.github.com/nnnpooh/8a8ed7ebe3659c73d159e1e495d7af86#file-stores-ts)
+
+---
+
+# Startup Logics
+
+- Open MetaMask
+- Setup listener
+  - Change account
+  - Change network
+- [`./src/utils/useEthereum.ts`](https://gist.github.com/nnnpooh/8a8ed7ebe3659c73d159e1e495d7af86#file-useethereum-ts)
+  - Using `useEffect` function
+- Insert `useEthereum()` into `_app.tsx`
+
+---
+
+# Fix `TypeScript` Error
+
+- `types/index.d.ts`
+
+```js
+import { ExternalProvider } from "@ethersproject/providers";
+import { MetaMaskInpageProvider } from "@metamask/providers";
+
+declare global {
+  interface Window {
+    ethereum?: MetaMaskInpageProvider;
+  }
+}
+
+export {};
+```
+
+---
+
+- `tsconfig.json`
+
+```json
+...
+"typeRoots": ["./node_modules/@types", "./src/types"],
+...
+```
+
+---
+
+# React to change in state
+
+- When you change account and network in Metamask, the application should react to it.
+  - `useEffect` with dependency.
+- [./src/utils/useMetaMask.ts](https://gist.github.com/nnnpooh/8a8ed7ebe3659c73d159e1e495d7af86#file-usemetamask-ts)
+- Insert `useEthereum()` into `_app.tsx`
+- Insert `useMetaMask()` into into `_app.tsx`
+
+---
+
+# Update `AccountButton`
+
+- [AccountButton](https://gist.github.com/nnnpooh/8a8ed7ebe3659c73d159e1e495d7af86#file-navbar-tsx)
