--- a/lectures/src/T19 - DApp/T19.md
+++ b/lectures/src/T19 - DApp/T19.md
@@ -29,7 +29,7 @@ h1 {
 
 ---
 
-# Part 1
+# Part 1: Application structure
 
 ---
 
@@ -58,7 +58,7 @@ h1 {
 
 ---
 
-# Part 2
+# Part 2: Connecting to MetaMask
 
 ---
 
@@ -148,3 +148,171 @@ export {};
 # Update `AccountButton`
 
 - [AccountButton](https://gist.github.com/nnnpooh/8a8ed7ebe3659c73d159e1e495d7af86#file-navbar-tsx)
+
+---
+
+# Part 3: Incorporating smart contract
+
+---
+
+# HardHat
+
+- Create a contact `Secret.sol` (code below)
+- Compile the contract
+  - `npx hardhat compile`
+  - Obtain `Secret.json`
+- Create a deploy script `deploy-secret.ts` (code below)
+- Deploy the contract.
+  - `npx hardhat run --network goerli ./scripts/deploy-secret.ts`
+  - _(You need Alchemy key.)_
+- Obtain contract address
+
+---
+
+`./contracts/Secret.sol`
+
+```js
+// SPDX-License-Identifier: GPL-3.0
+pragma solidity >=0.7.0 <0.9.0;
+contract Secret {
+    string public secret;
+    address public owner;
+    constructor(string memory _secret) {
+        owner = msg.sender;
+        secret = _secret;
+    }
+    modifier onlyOwner() {
+        require(msg.sender == owner, "Only owner can change the message.");
+        _;
+    }
+    function changeSecret(string memory _secret) public onlyOwner {
+        secret = _secret;
+    }
+}
+```
+
+---
+
+`./scripts/deploy-secret.ts`
+
+```js
+import { ethers } from "hardhat";
+
+async function main() {
+  const Secret = await ethers.getContractFactory("Secret");
+  const secret = await Secret.deploy("Really Secret Message");
+}
+main().catch((error) => {
+  console.error(error);
+  process.exitCode = 1;
+});
+```
+
+---
+
+# Insert smart contract to DApp
+
+- Copy `Secret.json` from HardHat to `./src/abi`
+- Create `./src/abi/secret.ts`
+
+```js
+import Secret from "./Secret.json";
+export const SecretContract = Secret;
+export const contractAddress = process.env.NEXT_PUBLIC_CONTRACT_ADDRESS || "";
+```
+
+- Create `./.env` ("Dot" ENV file)
+  - Insert your contract address (from Etherscan)
+
+```
+NEXT_PUBLIC_CONTRACT_ADDRESS=........
+```
+
+---
+
+# Create logics to fetch and change `secret`
+
+- Create `./src/components/home/useContract.ts`
+  - Fetch `secret` message when there is a change in accout and network.
+    - When `secret` cannot be fetched, handle the error.
+  - Export `writeSecret` function to change `secret` when the button is pressed.
+  - Keep track of the loading state through `isLoading`.
+  - Keep track of error state through `isError`.
+  - [Code](https://gist.github.com/nnnpooh/15a43822f55cc7fcc6f90e3973320a2c#file-usecontract-ts)
+
+---
+
+# Update UI
+
+- Modify `./src/components/home/Body.tsx`
+  - Display real `secret`
+  - Button will trigger transaction from MetaMask.
+  - Show loading state (loading spinner).
+  - Show errors (icon) when `secret` cannot be fetched.
+  - Disable input when errors occur.
+  - [Code](https://gist.github.com/nnnpooh/15a43822f55cc7fcc6f90e3973320a2c#file-body-tsx)
+- Personalize your application.
+
+---
+
+# Building project
+
+- Ignore code checking rules.
+  - Change `ignoreDuringBuilds` to `true`
+
+`./next.config.mjs`
+
+```js
+  eslint: {
+    ignoreDuringBuilds: true, // Change from false to true
+  },
+```
+
+- `npm run build`
+
+---
+
+# Upload your change to GitHub
+
+- `git add .`
+- `git commit -m "Working Version"`
+- `git push`
+
+---
+
+# Deploy your DApp to cloud provider
+
+- https://vercel.com/
+- Sign up with your GitHub account
+- In the `Let's build something new.` page
+  - Under `Import Git Repository`
+    - Select `+ GitHub Account`
+  - Your should see your repository name appearing.
+  - Click `Import`
+
+---
+
+# Deploy your DApp to cloud provider
+
+- In the `You're almost done.` page
+  - Under `Environment Variables`
+    - `Name`: `NEXT_PUBLIC_CONTRACT_ADDRESS`
+    - `Value`: _[Contract Address]_
+  - Save the change.
+  - Click `Deploy`
+- Once finished, you should see the link to your DApp in the dashboard page.
+  - You can also change the domain by going to `Settings`-> `Domains`
+
+---
+
+# Testing your app
+
+- Make sure you have the environment variable in `Settings` -> `Environment Variables`
+- If you make changes to the environment variables
+  - Go to the `Deployments` tab
+  - Click at dropdown menu of the last deployment.
+  - Click `Redeploy`
+
+---
+
+# Yay ....
